# dining_philosopher

./: .gitignore  CMakeLists.txt  dining_gtest.hpp  fork.hpp  gtest.cpp  main.cpp  monitor.hpp  philosopher.hpp  waiter.hpp  waiter_gtest.hpp
dining/: CMakeLists.txt  fork.hpp  monitor.hpp
google_testing/: CMakeLists.txt
